# studcamp-project

./: .env_example  .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: main.py  s3.py
dags/tasks/: model_train.py  read_and_preprocess.py
dags/utils/: s3_client.py
examples/: clickhouse_connect.ipynb
inference/: Dockerfile  entrypoint.sh  main.py  s3_client.py
notebooks/: RegionalStatsProcessing.ipynb  msp_pipeline.ipynb
